updated pdf viewer

--- a/index.html
+++ b/index.html
@@ -95,9 +95,22 @@
     </div>
   </section>
 
+  <!-- ==================== Portfolio ==================== -->
+<section id="portfolio" class="section portfolio">
+  <h2>Our Portfolio</h2>
+  
+  <!-- PDF embed for desktop/tablet -->
+  <div class="portfolio-pdf">
+    <iframe src="portfolio/SMTTC-Portfolio.pdf" title="Company Portfolio"></iframe>
+  </div>
+
+  <!-- Button fallback for mobile -->
+  <div class="portfolio-link">
+    <a href="https://drive.google.com/file/d/1vea8UNh1qatRb_xPKVnEpsGRbIWK3faU/view" target="_blank" rel="noopener">📑 View Portfolio</a>
+  </div>
+</section>
+
   <!-- ==================== Contact ==================== -->
-  
-  
     </section>
     <section id="contact" class="section contact">
     <h2>Reach Us</h2>
